# bevy-sol-sim

./: .gitignore  CREDITS.md  Cargo.toml  GAMIFICATION.md  README.md
src/: boundry.rs  camera.rs  gui.rs  main.rs  sol.rs
src/gui/: asset_loader.rs  assets.rs  camera.rs  kb_mouse.rs  mouse_states.rs  panels.rs  sol_gui.rs  tools.rs  ui_bottom_panel.rs  ui_camera.rs  ui_selected_body.rs  ui_spawning.rs
src/gui/assets/: asset_loader.rs  mesher_plugin.rs
src/gui/camera/: ui_camera.rs
src/gui/constants/: constants.rs
src/gui/kb_mouse/: keybinds.rs  mouse_states.rs
src/gui/panels/: ui_bottom_panel.rs  ui_selected_body.rs  ui_time.rs
src/gui/sol_gui/: body_grid.rs  celestial_body_gui.rs  trail.rs
src/gui/tools/: follow_body.rs  spawning.rs  trajectory.rs
src/sol/: celestial_body.rs  celestial_type.rs  reality_calculator.rs  reality_calulator.rs  systems.rs  utils.rs  voxels.rs
src/sol/voxels/: composition.rs  elements.rs
