[package]
name = "solar-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

## https://bevyengine.org/learn/book/getting-started/setup/
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

## https://bevyengine.org/learn/book/getting-started/setup/
# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
# https://bevyengine.org/learn/book/getting-started/setup/
bevy = { version = "0.11.3", features = ["dynamic_linking"] }
vector2d = "2.2.0"
random_name_generator = "0.3.6"
bevy_fly_camera = {path = "../bevy_fly_camera"}
bevy_egui = "0.22.0"
